--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,14 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Book App</title>
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <main>
-    <h1>Hello Word</h1>
-    <p><a href="/hello">test my route</a></p>
+    <header>
+        <h1>Hello World</h1>
+    </header>
+   
 
-   </main>
 </body>
 </html>
