--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,17 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book App</title>
-  <link rel="stylesheet" href="style.css">
-
+    <title>book-app</title>
+    <link rel="stylesheet" href="/styles/reset.css" type="text/css">
+    <link rel="stylesheet" href="/styles/base.css" type="text/css">
+    <link rel="stylesheet" href="/styles/theme.css" type="text/css">
+    <link rel="stylesheet" href="/styles/icons.css" type="text/css">
+    <link rel="stylesheet" href="/styles/layout.css" type="text/css">
+    <link rel="stylesheet" href="/styles/modules.css" type="text/css">
 </head>
+
 <body>
     <header>
-        <h1>Hello World</h1>
-    </header>
-   
+        <div id="logo">
+            <h1>My Library</h1>
+        </div>
+        <div id="menu-bar">
+            <div id="humrger-btn">
+                <div id="bar1 " class="bar bar1"></div>
+                <div id="bar2 " class="bar bar2"></div>
+                <div id="bar3 " class="bar bar3"></div>
+            </div>
+            <div class="main-nav">
+                <ul class="nav" id="nav">
+                    <li><a href="/">My Favorite Books</a></li>
+                    <li><a href="/search">GOOGLE BOOKS</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="menu-bg" id="menu-bg"></div>
 
-</body>
+    </header>
+    <main>
+         <h1 style="font-size: 30px;text-align: center;padding-top: 30px;">Enjoy In Your Reading</h1>
+    </main>
+<footer>
+
+        </footer>
+        <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+        <script src="/app.js"></script>
+    
+    </body>
 </html>
