--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -5,6 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>error</title>
 </head>
-<body>
+<body style="background-color: red; padding: 150px;">
     <h1>Error In Insert</h1>
 </body>
